## 0.14.0
  * Add 'functional' tox env for functional tests
  * Add a new package `utils.sonata`. Move all SONATA related utils there
  * Add a new module `utils.sonata.curate` to curate/fix existing SONATA circuits
  * Fix updating edge positions during reindex of `utils.sonata.reindex`

## 0.13.2
  * Catch duplicate me-combos

## 0.13.1
  * Add "--input" option to "cells.place"
  * Fix losing of SONATA population name at "cells.assign_emodels"

## 0.13.0
  * Create "sonata.provide_me_info". This action provisions SONATA nodes with ME info
  * "sonata.from_mvd3" reuses "sonata.provide_me_info" under the hood

## 0.12.1
  * Fixes to sonata functions
  * "assign_emodels2" function now adds the missing biophysical field
  * "sonata.from_mvd3" remove the library argument (handled by voxcell now)
  * "sonata.from_mvd3" add a model type

## 0.12.0

  * Allows cli with mvd3 inputs/outputs to use sonata files instead. The format detection is done
    using the file extension : '.mvd3' will save/read a 'mvd3' file. For any other file extension,
    sonata is used.
  * "place" cli can output seamlessly sonata or mvd3 files
  * "assign_emodels/assign_emodels2" can use sonata or mvd3 files as input
  * "assign" cli can use sonata or mvd3 files as input
  * rename of "target.from_mvd3" to "target.from_input" and can use both formats as input
  * "target.node_sets" can use both formats as input

## 0.11.10

 * Add atlas based node set with sonata files [NSETM-1010]
 * Change the node_set location inside the sonata config file. Now attached to the circuit not
   the node files

## 0.11.9

 * added reindex for only children, need to convert connectivity to swc
 * updated & fixed documentation
 * Fix empty query_based crash [NSETM-1003]

## 0.11.8

 * atlases creation cli

## 0.11.7

 * Use NodePopulation.from_cell_collection
 * BBPBGLIB-557: use SONATA naming, not syn2
 * Add target to node_set direct converter

## 0.11.6
